// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`MainLayout if user is not connected should not render sidebar: connected 1`] = `
<DocumentFragment>
  <div
    class="css-1xdhq9s"
    data-testid="sidebar-layout"
  >
    <div
      class="chakra-stack css-b5leqj"
    >
      <div
        class="css-df6r3v"
        data-testid="sidebar-item-Dashboard"
        to="DASHBOARD"
      >
        <button
          class="css-duy0v9"
        >
          <svg
            class="chakra-icon css-1qzovvq"
            fill="currentColor"
            focusable="false"
            height="1em"
            viewBox="0 0 256 256"
            width="1em"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M128,24A104,104,0,1,0,232,128,104.11,104.11,0,0,0,128,24Zm0,16a88,88,0,0,1,71.87,37.27L128,118.76Zm0,176a88,88,0,0,1-71.87-37.27L207.89,91.12A88,88,0,0,1,128,216Z"
            />
          </svg>
        </button>
        <p
          class="css-bxmmhf"
        >
          Dashboard 
        </p>
      </div>
    </div>
  </div>
  <div
    class="chakra-stack css-1h0sumw"
  >
    <div
      class="css-18ne1hj"
      data-testid="header-layout"
    >
      <div
        class="css-mlc07r"
      >
        <img
          alt="Hedera"
          src="[object Object]"
          style="width: auto; height: 32px;"
        />
        <div
          class="css-16bqc1g"
        >
          <button
            aria-controls="menu-list-:r1:"
            aria-expanded="false"
            aria-haspopup="menu"
            class="chakra-button chakra-menu__menu-button css-cvfljb"
            id="menu-button-:r1:"
            type="button"
          >
            <span
              class="chakra-button__icon css-1wh2kri"
            >
              <svg
                aria-hidden="true"
                class="chakra-icon css-kpbtv0"
                fill="currentColor"
                focusable="false"
                height="1em"
                viewBox="0 0 256 256"
                width="1em"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M216,72H56a8,8,0,0,1,0-16H192a8,8,0,0,0,0-16H56A24,24,0,0,0,32,64V192a24,24,0,0,0,24,24H216a16,16,0,0,0,16-16V88A16,16,0,0,0,216,72Zm0,128H56a8,8,0,0,1-8-8V86.63A23.84,23.84,0,0,0,56,88H216Zm-48-60a12,12,0,1,1,12,12A12,12,0,0,1,168,140Z"
                />
              </svg>
            </span>
            <span
              class="css-xl71ch"
            >
              0xd8da6bf26964af9d7eed9e03e53415d37aa96045
            </span>
            <span
              class="chakra-button__icon css-1hzyiq5"
            >
              <svg
                aria-hidden="true"
                class="chakra-icon css-kpbtv0"
                fill="currentColor"
                focusable="false"
                height="1em"
                viewBox="0 0 256 256"
                width="1em"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M213.66,101.66l-80,80a8,8,0,0,1-11.32,0l-80-80A8,8,0,0,1,53.66,90.34L128,164.69l74.34-74.35a8,8,0,0,1,11.32,11.32Z"
                />
              </svg>
            </span>
          </button>
          <div
            class="css-r6z5ec"
            style="visibility: hidden; position: absolute; min-width: max-content; inset: 0 auto auto 0;"
          >
            <div
              aria-orientation="vertical"
              class="chakra-menu__menu-list css-1dns8wi"
              id="menu-list-:r1:"
              role="menu"
              style="transform-origin: var(--popper-transform-origin); opacity: 0; visibility: hidden; transform: scale(0.8) translateZ(0);"
              tabindex="-1"
            >
              <div
                class="chakra-stack css-6ekxde"
              >
                <button
                  class="chakra-menu__menuitem css-1xsc1dv"
                  data-index="0"
                  data-testid="dropdown-item"
                  id="menu-list-:r1:-menuitem-:r2:"
                  role="menuitem"
                  tabindex="-1"
                  type="button"
                >
                  <svg
                    class="chakra-icon css-kpbtv0"
                    data-testid="dropdown-item-icon"
                    fill="currentColor"
                    focusable="false"
                    height="1em"
                    viewBox="0 0 256 256"
                    width="1em"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <path
                      d="M112,216a8,8,0,0,1-8,8H48a16,16,0,0,1-16-16V48A16,16,0,0,1,48,32h56a8,8,0,0,1,0,16H48V208h56A8,8,0,0,1,112,216Zm109.66-93.66-40-40a8,8,0,0,0-11.32,11.32L196.69,120H104a8,8,0,0,0,0,16h92.69l-26.35,26.34a8,8,0,0,0,11.32,11.32l40-40A8,8,0,0,0,221.66,122.34Z"
                    />
                  </svg>
                  <p
                    class="css-1a1j0go"
                  >
                    Disconnect Wallet
                  </p>
                </button>
              </div>
            </div>
          </div>
          <hr
            aria-orientation="vertical"
            class="chakra-divider css-1aam7vk"
          />
          <div
            class="chakra-stack css-x0u0or"
          >
            <p
              class="css-sl9a0d"
            >
              General mode
            </p>
          </div>
        </div>
      </div>
    </div>
    <main
      class="chakra-stack css-1jt16a2"
    />
  </div>
  <span
    hidden=""
    id="__chakra_env"
  />
</DocumentFragment>
`;

exports[`MainLayout if user is not connected should not render sidebar: disconnected 1`] = `
<DocumentFragment>
  <div
    class="chakra-stack css-1h0sumw"
  >
    <div
      class="css-18ne1hj"
      data-testid="header-layout"
    >
      <div
        class="css-mlc07r"
      >
        <img
          alt="Hedera"
          src="[object Object]"
          style="width: auto; height: 32px;"
        />
        <div
          class="css-16bqc1g"
        >
          <hr
            aria-orientation="vertical"
            class="chakra-divider css-1aam7vk"
          />
          <div
            class="chakra-stack css-x0u0or"
          >
            <p
              class="css-sl9a0d"
            >
              General mode
            </p>
          </div>
        </div>
      </div>
    </div>
    <main
      class="chakra-stack css-1jt16a2"
    />
  </div>
  <span
    hidden=""
    id="__chakra_env"
  />
</DocumentFragment>
`;
